Fix wrapping in emoji shelf output

--- a/app/emoji-shelf/emoji-shelf.module.css
+++ b/app/emoji-shelf/emoji-shelf.module.css
@@ -43,6 +43,6 @@
   margin: 32px auto;
   overflow: scroll;
   resize: none;
-  white-space: nowrap;
+  white-space: pre;
   font-size: 1rem;
 }
